# spreadfinder

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  spread-scanner.service
alerting/: __init__.py  formatter.py  telegram.py
config/: __init__.py  settings.py
deploy/: auto-deploy.sh  pull-latest-to-vps.sh  spread-scanner-autodeploy.service  spread-scanner-autodeploy.timer
exchange_adapters/: __init__.py  aster.py  base.py  binance.py  binance_alpha.py  bitget.py  bybit.py  dex_common.py  gate.py  hyperliquid.py  lighter.py  mexc.py  okx.py  okx_dex.py
filters/: __init__.py  filter_chain.py  market_cap_filter.py  opportunity_filters.py
models/: __init__.py  snapshot.py
pump_detector/: __init__.py  detector.py  models.py  price_history.py
spread_engine/: __init__.py  calculator.py  confidence.py
symbol_mapper/: __init__.py  exchange_symbols.py  mapper.py  ticker_aliases.py
tests/: test_alerting.py  test_aster_adapter.py  test_base_adapter.py  test_binance_adapter.py  test_dex_adapters.py  test_filters.py  test_gate_adapter.py  test_hyperliquid_adapter.py  test_main.py  test_market_cap_filter.py  test_models.py  test_pump_detector.py  test_spread_engine.py  test_symbol_mapper.py  test_telegram_sender.py  test_ticker_aliases.py
utils/: __init__.py  deposit_checker.py  exchange_links.py  logging.py  okx_auth.py  reconnect.py  venues.py
